--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "start": "nodemon server/index.js",
-    "client-dev": "cross-env NODE_ENV=development webpack serve --config webpack.config.js",
-    "server-dev": "cross-env NODE_ENV=development nodemon server/server.js",
-    "dev": "concurrently \"npm run client-dev\"  \"npm run server-dev\""
+    "server": "nodemon server/server.js",
+    "start": "cross-env NODE_ENV=development webpack serve",
+    "build": "cross-env NODE_ENV=development webpack --config webpack.config.js",
+    "dev": "concurrently \"npm run start\" \"npm run server\""
   },
   "repository": {
     "type": "git"
@@ -17,36 +16,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
-    "babel-loader": "^8.1.0",
-    "concurrently": "^5.3.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^5.0.0",
-    "dotenv": "^8.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "html-webpack-plugin": "^4.5.0",
-    "nodemon": "^2.0.6",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.3.2",
-    "webpack-dev-server": "^3.11.0"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.12.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "file-loader": "^1.1.6",
-    "html-loader": "^0.5.5",
-    "prettier": "^2.1.2",
-    "webpack-cli": "^4.2.0"
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "babel-loader": "^8.2.2",
+    "concurrently": "^5.3.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.1",
+    "dot-env": "0.0.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.1",
+    "nodemon": "^2.0.6",
+    "sass": "^1.32.0",
+    "scss-loader": "0.0.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-server": "^3.11.1"
   }
 }
