--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html-webpack-plugin": "^4.5.1",
     "nodemon": "^2.0.6",
     "sass": "^1.32.0",
+    "sass-loader": "^11.0.1",
     "scss-loader": "0.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.11.1",
