--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "server": "nodemon server/server.js",
     "start": "cross-env NODE_ENV=development webpack serve",
     "build": "cross-env NODE_ENV=development webpack --config webpack.config.js",
-    "dev": "concurrently \"npm run start\" \"npm run server\""
+    "dev": "concurrently \"npm run start\" \"npm run server\"",
+    "format": "prettier --write client/**/*.{js,jsx,ts,tsx}"
   },
   "repository": {
     "type": "git"
